tests/neg-custom-args/captures/filevar.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/filevar.scala:15:12 --------------------------------------
15 |  withFile: f =>       // error with level checking, was OK under both schemes before
   |            ^
   |Capability l outlives its scope: it leaks into outer capture set 's1 of parameter f.
   |The leakage occurred when trying to match the following types:
   |
   |Found:    (l: scala.caps.Capability^) ?->'s2 File^'s3 ->'s4 Unit
   |Required: (l: scala.caps.Capability^) ?-> (f: File^{l}) => Unit
   |
   |where:    => refers to a root capability associated with the result type of (using l: scala.caps.Capability^): (f: File^{l}) => Unit
   |          ^  refers to the universal root capability
16 |    val o = Service()
17 |    o.file = f
18 |    o.log
   |
   | longer explanation available when compiling with `-explain`
